--- a/Vidly2/Vidly2.csproj
+++ b/Vidly2/Vidly2.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\RastgeleFilmViewModel.cs" />
+    <Compile Include="ViewModels\MusteriFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-yeti.css" />
@@ -285,6 +286,7 @@
     <Content Include="Views\Musteriler\Ayrintilar.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Filmler\Ayrintilar.cshtml" />
+    <Content Include="Views\Musteriler\MusteriForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
